updates api docs
